Fix #3245,#2193,#2941 - Timeline: Migrate to vis.js #5113 - Fix css of timeline menu facet to align to consider vis-tooltip.

--- a/src/main/resources/META-INF/resources/primefaces/timeline/timeline.css
+++ b/src/main/resources/META-INF/resources/primefaces/timeline/timeline.css
@@ -1088,7 +1088,7 @@ div.timeline-menu {
     position: absolute;
     right: 0;
     margin: 10px;
-    z-index: 999;
+    z-index: 5;/*it must be equals to vis-tooltip*/
 }
 
 div.timeline-menu-axis-both {
